DBZ-8574 Add ISOSTRING tests to JDBC sink