@@ -1578,7 +1578,7 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testDateDataType(Source source, Sink sink) throws Exception {
         assertDataType(source,
                 sink,
@@ -1604,11 +1604,25 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testDateDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        assertDataType(source,
+                sink,
+                "date",
+                List.of(dateValue(source, 3, 1, 2023), dateValue(source, 5, 10, 2021)),
+                List.of("2023-03-01Z", "2021-05-10Z"),
+                (record) -> {
+                    assertColumn(sink, record, "id", getTextType());
+                    assertColumn(sink, record, "data", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testTimeDataType(Source source, Sink sink) throws Exception {
-        final boolean connect = source.getOptions().getTemporalPrecisionMode() == TemporalPrecisionMode.CONNECT;
-        int nanoSeconds = connect ? 123000000 : 123456000;
+        int nanoSeconds = isConnectPrecision(source) ? 123000000 : 123456000;
         switch (source.getType()) {
             case MYSQL:
                 // Emitted as seconds precision.
@@ -1619,7 +1633,7 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
         switch (sink.getType()) {
             case MYSQL:
                 if (source.getType().is(SourceType.POSTGRES)) {
-                    nanoSeconds = connect ? 123000000 : 123456000;
+                    nanoSeconds = isConnectPrecision(source) ? 123000000 : 123456000;
                 }
                 else if (!source.getType().is(SourceType.SQLSERVER)) {
                     nanoSeconds = 0;
@@ -1645,16 +1659,36 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testTimeDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        List<String> expected = List.of("01:02:03.123456Z", "14:15:16.123456Z");
+        if (source.getType().is(SourceType.MYSQL)
+                || sink.getType().is(SinkType.DB2)
+                || (sink.getType().is(SinkType.MYSQL) && !source.getType().is(SourceType.SQLSERVER))) {
+            expected = List.of("01:02:03Z", "14:15:16Z");
+        }
+        assertDataType(source,
+                sink,
+                "time",
+                List.of("'01:02:03.123456'", "'14:15:16.123456'"),
+                expected,
+                (record) -> {
+                    assertColumn(sink, record, "id", getTextType());
+                    assertColumn(sink, record, "data", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME(n) data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testTimeWithPrecisionDataType(Source source, Sink sink) throws Exception {
         final String ts0 = "'01:02:03.123456'";
         final String ts1 = "'14:15:16.456789'";
 
-        final boolean isConnect = source.getOptions().getTemporalPrecisionMode() == TemporalPrecisionMode.CONNECT;
-
         int nanoSeconds0 = 123000000;
-        int nanoSeconds1 = isConnect ? 456000000 : 456789000;
+        int nanoSeconds1 = isConnectPrecision(source) ? 456000000 : 456789000;
 
         if (sink.getType().is(/* SinkType.ORACLE, */ SinkType.DB2)) {
             nanoSeconds0 = 0;
@@ -1691,11 +1725,31 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
 
     @TestTemplate
     @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME(n) data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testTimeWithPrecisionDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        final String ts0 = "'01:02:03.123456'";
+        final String ts1 = "'14:15:16.456789'";
+
+        assertDataTypes2(source,
+                sink,
+                List.of("time(3)", "time(6)"),
+                List.of(ts0, ts1),
+                List.of("01:02:03.123Z", "14:15:16.456789Z", "01:02:03.123Z", "14:15:16.456789Z"),
+                (record) -> {
+                    assertColumn(sink, record, "id0", getTextType());
+                    assertColumn(sink, record, "id1", getTextType());
+                    assertColumn(sink, record, "data0", getTextType());
+                    assertColumn(sink, record, "data1", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
+    @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME(n) data type support")
     @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES }, reason = "Max TIME(n) precision is 6")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testNanoTimeDataType(Source source, Sink sink) throws Exception {
-        final boolean connect = source.getOptions().getTemporalPrecisionMode() == TemporalPrecisionMode.CONNECT;
-        int nanoSeconds = connect ? 456000000 : 456789000;
+        int nanoSeconds = isConnectPrecision(source) ? 456000000 : 456789000;
         if (sink.getType().is(SinkType.DB2)) {
             nanoSeconds = 0;
         }
@@ -1709,9 +1763,23 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.ORACLE }, reason = "No TIME(n) data type support")
+    @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES }, reason = "Max TIME(n) precision is 6")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testNanoTimeDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        assertDataTypeNonKeyOnly(source,
+                sink,
+                "time(7)",
+                List.of("'14:15:16.456789012'"),
+                List.of(sink.getType().is(SinkType.DB2) ? "14:15:16Z" : "14:15:16.456789Z"),
+                (record) -> assertColumn(sink, record, "data", getTextType()),
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.SQLSERVER }, reason = "TIMESTAMP is an internal type and isn't the same as TIMESTAMP(n)")
     @SkipWhenSource(value = { SourceType.MYSQL }, reason = "MySQL emits timestamps as ZonedTimestamp types, tested separately")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testTimestampDataType(Source source, Sink sink) throws Exception {
         final List<ZonedDateTime> timeValues = List.of(
                 ZonedDateTime.of(2023, 5, 10, 16, 17, 18, 123456000, ZoneOffset.UTC),
@@ -1720,13 +1788,13 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
         final List<String> values = toTimestampStrings(source, timeValues);
 
         final List<ZonedDateTime> expectedValues = new ArrayList<>();
-        if (TemporalPrecisionMode.CONNECT == source.getOptions().getTemporalPrecisionMode()) {
+        if (isConnectPrecision(source)) {
             // There is always a loss of precision on timestamp(n) where n > 3 using connect precision mode
-            expectedValues.add(timeValues.get(0).with(ChronoField.NANO_OF_SECOND, 123000000).withZoneSameLocal(SINK_ZONE_ID));
-            expectedValues.add(timeValues.get(1).with(ChronoField.NANO_OF_SECOND, 456000000).withZoneSameLocal(SINK_ZONE_ID));
+            expectedValues.add(timeValues.get(0).withNano(123000000).withZoneSameLocal(SINK_ZONE_ID));
+            expectedValues.add(timeValues.get(1).withNano(456000000).withZoneSameLocal(SINK_ZONE_ID));
         }
         else {
-            expectedValues.addAll(timeValues.stream().map(v -> v.withZoneSameLocal(SINK_ZONE_ID)).collect(Collectors.toList()));
+            expectedValues.addAll(timeValues.stream().map(v -> v.withZoneSameLocal(SINK_ZONE_ID)).toList());
         }
 
         assertDataType(source,
@@ -1742,18 +1810,39 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.SQLSERVER }, reason = "TIMESTAMP is an internal type and isn't the same as TIMESTAMP(n)")
+    @SkipWhenSource(value = { SourceType.MYSQL }, reason = "MySQL emits timestamps as ZonedTimestamp types, tested separately")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testTimestampDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        final List<ZonedDateTime> timeValues = List.of(
+                ZonedDateTime.of(2023, 5, 10, 16, 17, 18, 123456000, ZoneOffset.UTC),
+                ZonedDateTime.of(2022, 12, 31, 14, 15, 16, 456789000, ZoneOffset.UTC));
+
+        assertDataType(source,
+                sink,
+                "timestamp",
+                toTimestampStrings(source, timeValues),
+                List.of("2023-05-10T16:17:18.123456Z", "2022-12-31T14:15:16.456789Z"),
+                (record) -> {
+                    assertColumn(sink, record, "id", getTextType());
+                    assertColumn(sink, record, "data", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.SQLSERVER }, reason = "No TIMESTAMP(n) data type support")
     @SkipWhenSource(value = { SourceType.MYSQL }, reason = "MySQL emits timestamps as ZonedTimestamp types, tested separately")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testTimestampWithPrecisionDataType(Source source, Sink sink) throws Exception {
         final ZonedDateTime timeValue = ZonedDateTime.of(2022, 12, 31, 14, 15, 16, 456789000, ZoneOffset.UTC);
         final String value = toTimestampStrings(source, List.of(timeValue)).get(0);
 
         final List<ZonedDateTime> expectedValues = new ArrayList<>();
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 500000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(1)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 460000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(2)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 457000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(3)
-        if (TemporalPrecisionMode.CONNECT == source.getOptions().getTemporalPrecisionMode()) {
+        expectedValues.add(timeValue.withNano(500000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(1)
+        expectedValues.add(timeValue.withNano(460000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(2)
+        expectedValues.add(timeValue.withNano(457000000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(3)
+        if (isConnectPrecision(source)) {
             // There is always a loss of precision on timestamp(n) where n > 3 using connect precision mode
             final long nanos = 456000000;
             expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, nanos).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(4)
@@ -1761,9 +1850,9 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
             expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, nanos).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(6)
         }
         else {
-            expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456800000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(4)
-            expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456790000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(5)
-            expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456789000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(6)
+            expectedValues.add(timeValue.withNano(456800000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(4)
+            expectedValues.add(timeValue.withNano(456790000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(5)
+            expectedValues.add(timeValue.withNano(456789000).withZoneSameLocal(SINK_ZONE_ID)); // timestamp(6)
         }
 
         assertDataTypes(source,
@@ -1789,6 +1878,37 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.SQLSERVER }, reason = "No TIMESTAMP(n) data type support")
+    @SkipWhenSource(value = { SourceType.MYSQL }, reason = "MySQL emits timestamps as ZonedTimestamp types, tested separately")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testTimestampWithPrecisionDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        final ZonedDateTime timeValue = ZonedDateTime.of(2022, 12, 31, 14, 15, 16, 456789000, ZoneOffset.UTC);
+        final String value = toTimestampStrings(source, List.of(timeValue)).get(0);
+
+        assertDataTypes(source,
+                sink,
+                List.of("timestamp(1)", "timestamp(2)", "timestamp(3)", "timestamp(4)", "timestamp(5)", "timestamp(6)"),
+                List.of(value, value, value, value, value, value),
+                List.of("2022-12-31T14:15:16.5Z", "2022-12-31T14:15:16.46Z", "2022-12-31T14:15:16.457Z",
+                        "2022-12-31T14:15:16.4568Z", "2022-12-31T14:15:16.45679Z", "2022-12-31T14:15:16.456789Z"),
+                (record) -> {
+                    assertColumn(sink, record, "id0", getTextType());
+                    assertColumn(sink, record, "id1", getTextType());
+                    assertColumn(sink, record, "id2", getTextType());
+                    assertColumn(sink, record, "id3", getTextType());
+                    assertColumn(sink, record, "id4", getTextType());
+                    assertColumn(sink, record, "id5", getTextType());
+                    assertColumn(sink, record, "data0", getTextType());
+                    assertColumn(sink, record, "data1", getTextType());
+                    assertColumn(sink, record, "data2", getTextType());
+                    assertColumn(sink, record, "data3", getTextType());
+                    assertColumn(sink, record, "data4", getTextType());
+                    assertColumn(sink, record, "data5", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @ForSource(value = { SourceType.MYSQL }, reason = "MySQL emits TIMESTAMP(p) as ZonedTimestamp")
     @WithTemporalPrecisionMode
     public void testTimestampDataTypeAsZonedTimestampType(Source source, Sink sink) throws Exception {
@@ -1799,12 +1919,10 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
         // Convert provided timestamps to source time zone before being converted to strings.
         final List<String> values = toTimestampStrings(source, timeValues.stream()
                 .map(v -> v.withZoneSameInstant(SOURCE_ZONE_ID))
-                .collect(Collectors.toList()));
+                .toList());
 
         // Truncate nanoseconds to 0, MySQL does not emit ZonedTimestamp with fractional seconds
-        final List<ZonedDateTime> expectedValues = timeValues.stream()
-                .map(v -> v.with(ChronoField.NANO_OF_SECOND, 0))
-                .collect(Collectors.toList());
+        final List<ZonedDateTime> expectedValues = timeValues.stream().map(v -> v.withNano(0)).toList();
 
         // MySQL emits "timestamp" as a ZonedTimestamp and this implies a "timestamp with time zone"
         // column; which Oracle does not permit to exist as a primary key. In this use case, only
@@ -1829,12 +1947,12 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
         final String value = toTimestampStrings(source, List.of(timeValue.withZoneSameInstant(SOURCE_ZONE_ID))).get(0);
 
         final List<ZonedDateTime> expectedValues = new ArrayList<>();
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 500000000)); // timestamp(1)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 460000000)); // timestamp(2)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 457000000)); // timestamp(3)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456800000)); // timestamp(4)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456790000)); // timestamp(5)
-        expectedValues.add(timeValue.with(ChronoField.NANO_OF_SECOND, 456789000)); // timestamp(6)
+        expectedValues.add(timeValue.withNano(500000000)); // timestamp(1)
+        expectedValues.add(timeValue.withNano(460000000)); // timestamp(2)
+        expectedValues.add(timeValue.withNano(457000000)); // timestamp(3)
+        expectedValues.add(timeValue.withNano(456800000)); // timestamp(4)
+        expectedValues.add(timeValue.withNano(456790000)); // timestamp(5)
+        expectedValues.add(timeValue.withNano(456789000)); // timestamp(6)
 
         // MySQL emits "timestamp" as a ZonedTimestamp and this implies a "timestamp with time zone"
         // column; which Oracle does not permit to exist as a primary key. In this use case, only
@@ -1888,7 +2006,6 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     @TestTemplate
     @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.SQLSERVER }, reason = "No TIMESTAMP(n) WITH LOCAL TIME ZONE data type support")
     @WithTemporalPrecisionMode
-    @SuppressWarnings("DataFlowIssue")
     public void testTimestampWithLocalTimeZoneDataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         final String value = "TO_TIMESTAMP('2022-12-31 14:15:16.456789', 'YYYY-MM-DD HH24:MI:SS.FF6')";
@@ -1934,7 +2051,7 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
 
     @TestTemplate
     @SkipWhenSource(value = { SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testDateTimeDataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         String value1 = "'2023-05-10 16:00:00.456'";
@@ -1964,8 +2081,34 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testDateTimeDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
+        String value1 = "'2023-05-10 16:00:00.456'";
+        String value2 = "'2023-01-10 16:00:00.456'";
+
+        // DATETIME emitted as Timestamp, that uses second-based precision
+        List<String> expectedValues = List.of("2023-05-10T16:00:00.457Z", "2023-01-10T16:00:00.457Z");
+        if (source.getType().is(SourceType.MYSQL)) {
+            expectedValues = List.of("2023-05-10T16:00:00Z", "2023-01-10T16:00:00Z");
+        }
+
+        assertDataTypesNonKeyOnly(source,
+                sink,
+                List.of("datetime", "datetime"),
+                List.of(value1, value2),
+                expectedValues,
+                (record) -> {
+                    assertColumn(sink, record, "data0", getTextType());
+                    assertColumn(sink, record, "data1", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.POSTGRES, SourceType.ORACLE, SourceType.SQLSERVER }, reason = "No DATETIME(n) data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testDateTimeWithPrecisionDataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         final String value = "'2023-03-01 14:15:16.456789'";
@@ -2001,8 +2144,32 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.POSTGRES, SourceType.ORACLE, SourceType.SQLSERVER }, reason = "No DATETIME(n) data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testDateTimeWithPrecisionDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
+        final String value = "'2023-03-01 14:15:16.456789'";
+
+        assertDataTypesNonKeyOnly(source,
+                sink,
+                List.of("datetime(1)", "datetime(2)", "datetime(3)", "datetime(4)", "datetime(5)", "datetime(6)"),
+                List.of(value, value, value, value, value, value),
+                List.of("2023-03-01T14:15:16.5Z", "2023-03-01T14:15:16.46Z", "2023-03-01T14:15:16.457Z",
+                        "2023-03-01T14:15:16.4568Z", "2023-03-01T14:15:16.45679Z", "2023-03-01T14:15:16.456789Z"),
+                (record) -> {
+                    assertColumn(sink, record, "data0", getTextType());
+                    assertColumn(sink, record, "data1", getTextType());
+                    assertColumn(sink, record, "data2", getTextType());
+                    assertColumn(sink, record, "data3", getTextType());
+                    assertColumn(sink, record, "data4", getTextType());
+                    assertColumn(sink, record, "data5", getTextType());
+                },
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME2 data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testDateTime2DataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         final String value = "'2023-03-01 14:15:16.456789Z'";
@@ -2022,8 +2189,22 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
     }
 
     @TestTemplate
+    @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME2 data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testDateTime2DataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
+        assertDataTypeNonKeyOnly(source,
+                sink,
+                "datetime2",
+                List.of("'2023-03-01 14:15:16.456789Z'"),
+                List.of("2023-03-01T14:15:16.456789Z"),
+                (record) -> assertColumn(sink, record, "data", getTextType()),
+                ResultSet::getString);
+    }
+
+    @TestTemplate
     @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME2(n) data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testDateTime2WithPrecisionDataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         final String value = "'2023-03-01 14:15:16.456789123Z'";
@@ -2041,15 +2222,14 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
             }
         }
 
-        final boolean connect = TemporalPrecisionMode.CONNECT.equals(source.getOptions().getTemporalPrecisionMode());
         final List<ZonedDateTime> expectedValues = List.of(
                 toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, 500000000),
                 toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, 460000000),
                 toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, 457000000),
-                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, connect ? 456000000 : 456800000),
-                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, connect ? 456000000 : 456790000),
-                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, connect ? 456000000 : 456789000),
-                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, connect ? 456000000 : dateTime7NanoSeconds));
+                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, isConnectPrecision(source) ? 456000000 : 456800000),
+                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, isConnectPrecision(source) ? 456000000 : 456790000),
+                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, isConnectPrecision(source) ? 456000000 : 456789000),
+                toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 16, isConnectPrecision(source) ? 456000000 : dateTime7NanoSeconds));
 
         assertDataTypesNonKeyOnly(source,
                 sink,
@@ -2066,6 +2246,32 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
                     assertColumn(sink, record, "data6", getTimestampType(source, false, 6));
                 },
                 this::getTimestampAsZonedDateTime);
+    }
+
+    @TestTemplate
+    @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No DATETIME2(n) data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testDateTime2WithPrecisionDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
+        final String value = "'2023-03-01 14:15:16.456789123Z'";
+
+        assertDataTypesNonKeyOnly(source,
+                sink,
+                List.of("datetime2(1)", "datetime2(2)", "datetime2(3)", "datetime2(4)", "datetime2(5)", "datetime2(6)", "datetime2(7)"),
+                List.of(value, value, value, value, value, value, value),
+                List.of("2023-03-01T14:15:16.5Z", "2023-03-01T14:15:16.46Z", "2023-03-01T14:15:16.457Z",
+                        "2023-03-01T14:15:16.4568Z", "2023-03-01T14:15:16.45679Z", "2023-03-01T14:15:16.456789Z",
+                        "2023-03-01T14:15:16.4567891Z"),
+                (record) -> {
+                    assertColumn(sink, record, "data0", getTextType());
+                    assertColumn(sink, record, "data1", getTextType());
+                    assertColumn(sink, record, "data2", getTextType());
+                    assertColumn(sink, record, "data3", getTextType());
+                    assertColumn(sink, record, "data4", getTextType());
+                    assertColumn(sink, record, "data5", getTextType());
+                    assertColumn(sink, record, "data6", getTextType());
+                },
+                ResultSet::getString);
     }
 
     @TestTemplate
@@ -2129,7 +2335,7 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
 
     @TestTemplate
     @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No SMALLDATETIME data type support")
-    @WithTemporalPrecisionMode
+    @WithTemporalPrecisionMode(exclude = TemporalPrecisionMode.ISOSTRING)
     public void testSmallDateTimeDataType(Source source, Sink sink) throws Exception {
         // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
         final String value = "'2023-03-01 14:15:16'";
@@ -2140,6 +2346,21 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
                 List.of(toZonedDateTimeAtSinkOffset(2023, 3, 1, 14, 15, 0, 0)),
                 (record) -> assertColumn(sink, record, "data", getTimestampType(source, false, 6)),
                 this::getTimestampAsZonedDateTime);
+    }
+
+    @TestTemplate
+    @SkipWhenSource(value = { SourceType.MYSQL, SourceType.POSTGRES, SourceType.ORACLE }, reason = "No SMALLDATETIME data type support")
+    @WithTemporalPrecisionMode(include = TemporalPrecisionMode.ISOSTRING)
+    public void testSmallDateTimeDataTypeIsoStringPrecisionMode(Source source, Sink sink) throws Exception {
+        // Only test non-keys because Oracle does not permit timestamp with timezone as primary key columns
+        final String value = "'2023-03-01 14:15:16'";
+        assertDataTypeNonKeyOnly(source,
+                sink,
+                "smalldatetime", // minute precision
+                List.of(value),
+                List.of("2023-03-01T14:15:00Z"),
+                (record) -> assertColumn(sink, record, "data", getTextType()),
+                ResultSet::getString);
     }
 
     @TestTemplate
@@ -2805,6 +3026,10 @@ public abstract class AbstractJdbcSinkPipelineIT extends AbstractJdbcSinkIT {
 
     protected boolean isBitCoercedToBoolean() {
         return false;
+    }
+
+    private boolean isConnectPrecision(Source source) {
+        return source.getOptions().getTemporalPrecisionMode() == TemporalPrecisionMode.CONNECT;
     }
 
     private static List<String> toTimestampStrings(Source source, List<ZonedDateTime> values) {
